--- a/BlackStarWear/Base.lproj/Main.storyboard
+++ b/BlackStarWear/Base.lproj/Main.storyboard
@@ -500,7 +500,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dtr-qz-9pU">
-                                                    <rect key="frame" x="325" y="40" width="14" height="18"/>
+                                                    <rect key="frame" x="341" y="40" width="14" height="18"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="18" id="Btn-Nd-nmE"/>
                                                         <constraint firstAttribute="width" constant="14" id="RK0-9e-0jS"/>
@@ -510,8 +510,8 @@
                                                         <action selector="removeFromCart:" destination="GzL-Ka-caZ" eventType="touchUpInside" id="8ne-lA-sXi"/>
                                                     </connections>
                                                 </button>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hgK-Mm-2Jf">
-                                                    <rect key="frame" x="8" y="10" width="80" height="74"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hgK-Mm-2Jf">
+                                                    <rect key="frame" x="8" y="10" width="80" height="75"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="75" id="N32-Bn-tyx"/>
                                                         <constraint firstAttribute="width" constant="80" id="tL9-vN-JKK"/>
@@ -557,12 +557,11 @@
                                             <constraints>
                                                 <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Xgy-h2-Jfm" secondAttribute="trailing" priority="999" constant="197.33332824707031" id="219-ws-Qy3"/>
                                                 <constraint firstItem="MZS-AD-eZg" firstAttribute="top" secondItem="Xgy-h2-Jfm" secondAttribute="bottom" constant="1" id="7uM-JE-rEw"/>
-                                                <constraint firstAttribute="bottom" secondItem="hgK-Mm-2Jf" secondAttribute="bottom" constant="12" id="AiW-IS-Ouo"/>
+                                                <constraint firstAttribute="trailing" secondItem="dtr-qz-9pU" secondAttribute="trailing" constant="20" id="EHX-Uh-bnn"/>
                                                 <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="MZS-AD-eZg" secondAttribute="trailing" priority="999" constant="185" id="FCm-3o-cfW"/>
                                                 <constraint firstItem="O9z-mQ-Rkp" firstAttribute="leading" secondItem="hgK-Mm-2Jf" secondAttribute="trailing" constant="10" id="FV3-dD-bRl"/>
                                                 <constraint firstItem="hgK-Mm-2Jf" firstAttribute="top" secondItem="6Ex-Q6-OkV" secondAttribute="top" constant="10" id="HKs-zs-qWO"/>
                                                 <constraint firstItem="Xgy-h2-Jfm" firstAttribute="leading" secondItem="hgK-Mm-2Jf" secondAttribute="trailing" constant="10" id="Jxa-T9-Kbc"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="dtr-qz-9pU" secondAttribute="trailing" constant="20" id="Opf-v3-sdb"/>
                                                 <constraint firstAttribute="bottom" secondItem="dtr-qz-9pU" secondAttribute="bottom" constant="38" id="Sgx-kR-yDO"/>
                                                 <constraint firstItem="dtr-qz-9pU" firstAttribute="top" secondItem="6Ex-Q6-OkV" secondAttribute="top" constant="40" id="XjM-0K-45Q"/>
                                                 <constraint firstItem="Xgy-h2-Jfm" firstAttribute="top" secondItem="lEj-mH-hbT" secondAttribute="bottom" constant="5" id="Xz6-jv-LeL"/>
@@ -670,19 +669,27 @@
                                     <action selector="dismiss:" destination="IJB-BO-e3H" eventType="touchUpInside" id="mIf-iX-Wg2"/>
                                 </connections>
                             </button>
+                            <view hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e19-dx-Flu">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                <color key="backgroundColor" red="0.49744446109039619" green="0.49744446109039619" blue="0.49744446109039619" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="E1E-Sm-ldH" firstAttribute="top" secondItem="TTf-gO-mHl" secondAttribute="bottom" constant="36" id="812-gU-rnJ"/>
                             <constraint firstItem="TTf-gO-mHl" firstAttribute="top" secondItem="bzw-MA-vtC" secondAttribute="bottom" constant="8" symbolic="YES" id="C3o-Yk-PNN"/>
+                            <constraint firstAttribute="bottom" secondItem="e19-dx-Flu" secondAttribute="bottom" id="Dr7-0X-0Uj"/>
                             <constraint firstAttribute="trailing" secondItem="E1E-Sm-ldH" secondAttribute="trailing" constant="16" id="EnZ-Qr-HQp"/>
                             <constraint firstItem="9zo-Ya-AVh" firstAttribute="centerX" secondItem="Uua-7f-RTJ" secondAttribute="centerX" id="FD6-cQ-ff8"/>
+                            <constraint firstItem="e19-dx-Flu" firstAttribute="top" secondItem="Uua-7f-RTJ" secondAttribute="top" id="GEO-m0-MJz"/>
                             <constraint firstItem="bzw-MA-vtC" firstAttribute="top" secondItem="9zo-Ya-AVh" secondAttribute="bottom" constant="8" symbolic="YES" id="I8W-kg-gyv"/>
                             <constraint firstItem="E1E-Sm-ldH" firstAttribute="leading" secondItem="Uua-7f-RTJ" secondAttribute="leading" constant="16" id="LCl-Qv-fHl"/>
                             <constraint firstAttribute="trailing" secondItem="TTf-gO-mHl" secondAttribute="trailing" id="Ou4-b7-SK7"/>
                             <constraint firstItem="bzw-MA-vtC" firstAttribute="leading" secondItem="Uua-7f-RTJ" secondAttribute="leading" id="Ps1-69-tAv"/>
                             <constraint firstItem="p2a-34-cMT" firstAttribute="top" secondItem="TTf-gO-mHl" secondAttribute="bottom" id="UEA-1N-ZD8"/>
+                            <constraint firstAttribute="trailing" secondItem="e19-dx-Flu" secondAttribute="trailing" id="UPH-NO-LKh"/>
                             <constraint firstItem="9zo-Ya-AVh" firstAttribute="top" secondItem="tGP-H6-yv2" secondAttribute="bottom" constant="8" symbolic="YES" id="YbA-E2-rao"/>
+                            <constraint firstItem="e19-dx-Flu" firstAttribute="leading" secondItem="Uua-7f-RTJ" secondAttribute="leading" id="Zot-jR-2aK"/>
                             <constraint firstAttribute="trailing" secondItem="p2a-34-cMT" secondAttribute="trailing" id="cKe-9a-ycY"/>
                             <constraint firstItem="p2a-34-cMT" firstAttribute="leading" secondItem="Uua-7f-RTJ" secondAttribute="leading" id="fBN-WZ-xum"/>
                             <constraint firstItem="r1n-2q-nFW" firstAttribute="top" secondItem="E1E-Sm-ldH" secondAttribute="bottom" constant="48" id="hhg-RR-5Yb"/>
@@ -693,13 +700,15 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="containerView" destination="e19-dx-Flu" id="bvP-ps-9LJ"/>
+                        <outlet property="makeOrderLabel" destination="K6r-uc-3PG" id="WIo-ei-Cqv"/>
                         <outlet property="tableView" destination="bzw-MA-vtC" id="rQ8-as-JkX"/>
                         <outlet property="totalPriceLabel" destination="mxu-ox-hnN" id="rWO-Ah-v9f"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uea-c0-bOo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4329" y="84"/>
+            <point key="canvasLocation" x="4328.8000000000002" y="83.497536945812811"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="PRM-Cg-dge">
